--- a/asset/css/header.css
+++ b/asset/css/header.css
@@ -1,7 +1,18 @@
 /* headerType */
+#headerType {
+    width: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 9900;
+    transition: background-color 0.6s;
+}
+#headerType:hover {
+    background-color: #fff;
+    border-bottom: 1px solid #f5f5f5;
+}
 .header__inner {
-    margin-top: 40px;
-    /* width: 100%; */
+    /* margin-top: 40px; */
     height: 80px;
     display: flex;
     align-items: center;
@@ -9,14 +20,14 @@
     box-sizing: border-box;
 }
 .header__logo {
-    font-size: 30px;
+    /* font-size: 30px; */
     /* padding-left: 7px; */
     z-index: 1000;
 }
 .header__logo a {
     color: #6cc4b3;
     font-weight: 200;
-    font-size: 40px;
+    font-size: 30px;
 }
 .header__logo em {
     font-size: 18px;
@@ -24,7 +35,6 @@
 .header__menu {
     /* width: 80%; */
     text-align: right;
-    padding-top: 20px;
 }
 .header__menu ul {
     /* margin-left: 100px; */
@@ -43,7 +53,8 @@
     font-size: 14px;
     border: none;
 }
-.header__menu .login a {
+.header__menu .login > a {
+    font-size: 14px;
     padding-right: 0;
 }
 .header__menu li a:hover {
@@ -63,23 +74,23 @@
 }
 .ham_menu {
     position: absolute !important;
-    top: 70px;
+    top: 0px;
     right: -40px;
     display: block;
     width: 40px;
     height: 36px;
-    position: relative;
+    /* position: relative; */
     cursor: pointer;
-    z-index: 1000;
+    transform: translateY(-50px);
+    z-index: 10000;
 }
 .ham_menu div {
     position: absolute;
     right: 0;
     height: 2px;
     border-radius: 2px;
-    background: #6cc4b3;
-    transition: transform 0.45s cubic-bezier(0.9, -0.6, 0.3, 1.6),
-        width 0.2s ease 0.2s;
+    background: #6CC4B3;
+    transition: transform 0.45s cubic-bezier(0.9, -0.6, 0.3, 1.6), width 0.2s ease 0.2s;
 }
 .ham_menu input {
     display: none;
@@ -111,18 +122,22 @@
 .ham_menu.active input + div + div {
     width: 19px;
     transform: translate(6px, 0) rotate(45deg);
-    transition: transform 0.45s cubic-bezier(0.9, -0.6, 0.3, 1.6) 0.1s,
-        width 0.2s ease;
+    transition: transform 0.45s cubic-bezier(0.9, -0.6, 0.3, 1.6) 0.1s, width 0.2s ease;
 }
 .ham_menu.active input + div + div + div {
     width: 19px;
     transform: translate(-6px, 0) rotate(45deg);
-    transition: transform 0.45s cubic-bezier(0.9, -0.6, 0.3, 1.6) 0.1s,
-        width 0.2s ease;
+    transition: transform 0.45s cubic-bezier(0.9, -0.6, 0.3, 1.6) 0.1s, width 0.2s ease;
 }
+
+body.scrollStop {
+    overflow: hidden;
+}
+
 
 /* media */
 @media (max-width: 1300px) {
+
 }
 @media (max-width: 1024px) {
     .header__inner {
