--- a/asset/css/board/boardComment.css
+++ b/asset/css/board/boardComment.css
@@ -1,13 +1,13 @@
 #boardComment {
     margin-top: 30px;
     margin-bottom: 50px;
-    padding-bottom: 50px;
+    padding-bottom: 30px;
     border-bottom: 1px dashed #6cc4b3;
 }
-​#boardComment > h2 {
+#boardComment > h2 {
     color: #6cc4b3;
     font-size: 20px;
-    border-bottom: 1px solid #757575;
+    border-bottom: 1px solid #6cc4b3;
     padding-bottom: 10px;
 }
 .comment__h2 {
@@ -15,6 +15,142 @@
     border-bottom: 1px solid #6cc4b3;
     padding-bottom: 10px;
 }
+#boardViewComment {
+    width: 1340px;
+    margin-top: 30px;
+    color: #505050;
+}
+
+.comment__top {
+}
+.comment__write #commentName {
+    width: 150px;
+    border: 1px solid #6cc4b3;
+    border-radius: 30px;
+    padding-left: 10px;
+    outline: none;
+}
+#commentName:required {
+    color: #505050;
+}
+
+.comment__write #commentPass {
+    width: 150px;
+    border: 1px solid #6cc4b3;
+    border-radius: 30px;
+    padding-left: 10px;
+    outline: none;
+}
+#commentPass:required {
+    color: #505050;
+}
+
+.comment__write__msg input {
+    background: #f9f9f9;
+    width: 1280px;
+    border: 0;
+    border-radius: 10px;
+    padding: 20px;
+    outline: none;
+    font-size: 16px;
+    color: #fff;
+    margin-bottom: 10px;
+}
+.comment__write__msg input::placeholder {
+    font-size: 16px;
+    color: #757575;
+    width: 1280px;
+}
+#commentWrite:required {
+    color: #505050;
+    width: 1280px;
+}
+
+.comment__write__info button {
+    background: #fff;
+    color: #757575;
+    box-shadow: 3px 3px 6px 2px rgb(222 222 222 / 25%);
+    border-radius: 20px;
+    padding: 1px 10px;
+    margin-left: 5px;
+    cursor: pointer;
+}
+.comment__delete {
+    margin-top: 10px;
+    margin-right: 20px;
+}
+.comment__delete #commentDeletePass {
+    width: 150px;
+    border: 1px solid #6cc4b3;
+    border-radius: 30px;
+    padding-left: 10px;
+    outline: none;
+}
+.comment__delete button {
+    background: #fff;
+    color: #757575;
+    box-shadow: 3px 3px 6px 2px rgb(222 222 222 / 25%);
+    border-radius: 20px;
+    padding: 1px 10px;
+    margin-left: 5px;
+    cursor: pointer;
+}
+.comment__delete button:last-child {
+    margin-left: 0;
+}
+#commentDeletePass:required {
+    color: #505050;
+}
+
+.comment__modify {
+    margin-top: 10px;
+}
+.comment__modify #commentModifyMsg {
+    width: 200px;
+    border: 1px solid #6cc4b3;
+    border-radius: 30px;
+    padding-left: 10px;
+    outline: none;
+}
+.comment__modify #commentModifyMsg {
+    background: #f9f9f9;
+    width: 1280px;
+    border: 0;
+    border-radius: 10px;
+    padding: 20px;
+    outline: none;
+    font-size: 16px;
+    color: #fff;
+    margin-bottom: 10px;
+}
+#commentModifyMsg:required {
+    color: #505050;
+}
+
+.comment__modify #commentModifyPass {
+    width: 150px;
+    border: 1px solid #6cc4b3;
+    border-radius: 30px;
+    padding-left: 10px;
+    outline: none;
+}
+#commentModifyPass:required {
+    color: #505050;
+}
+
+.comment__modify button {
+    background: #fff;
+    color: #757575;
+    box-shadow: 3px 3px 6px 2px rgb(222 222 222 / 25%);
+    border-radius: 20px;
+    padding: 1px 10px;
+    margin-left: 5px;
+    cursor: pointer;
+}
+.comment__modify button:last-child {
+    margin-left: 0;
+}
+
 .com__top {
     color: #505050;
     font-size: 16px;
@@ -26,7 +162,7 @@
     margin-top: 3px;
 }
 .com__td {
-    padding-top: 30px;
+    padding-top: 20px;
 }
 #boardComment > tbody tr td > img {
     width: 16px;
